# slam-dataset-generator

./: CMakeLists.txt  LICENSE  README.md  data_structures.h  main.cpp  mainwindow.cpp  mainwindow.h  project_file.cpp  project_file.h  resources.qrc  simulator.cpp  simulator.h  stage_wrapper.cpp  stage_wrapper.h  widgets.cpp  widgets.h
simulation/: path_planner.cpp  path_planner.h  simulator.cpp  simulator.h  stage_wrapper.cpp  stage_wrapper.h
templates/: obstacle.template  robot.template  world.template
ui/: object_config.ui  simulator_config.ui
world/: world_items.cpp  world_items.h  world_model.cpp  world_model.h  world_view.cpp  world_view.h
